<resources>
    <string name="app_name">Ojek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="type_your_username">Type your username</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ojek">OJEK</string>
    <string name="sign_up_success">Sign Up Success!!!</string>
    <string name="search_for_a_pickup">Search for a pickup</string>
    <string name="search_for_a_destination">Search for a destination</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome">Mau pergi kemana hari ini?</string>
    <string name="test">Test</string>
    <string name="title_activity_request_order">RequestOrderActivity</string>
    <string name="sign_in_with_phone_number">Sign In with Phone Number</string>
    <string name="continue_t">Continue</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="continuep">Continue</string>
    <string name="registerp">Register</string>
    <string name="sign_in_with_google">SIGN IN with Google</string>

</resources>