<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layout_marginTop="24dp"
    android:paddingStart="24sp"
    android:paddingEnd="24dp"
    android:paddingTop="26dp"
    android:orientation="vertical"
    tools:context=".ui.auth.signUp.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_email_address"
        android:minHeight="48dp"
        android:padding="10dp"
        android:inputType="textPassword" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="@string/type_your_username"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

    <EditText
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_phone_number"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address" />

    <EditText
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_email_address"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_password"
        android:minHeight="48dp"
        android:padding="10dp"
        android:inputType="textPassword" />



    <Button
        android:id="@+id/btnSignUp2"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>