<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14171A"
    android:paddingStart="24sp"
    android:paddingEnd="24dp"
    android:paddingTop="26dp"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ipbremovebgpreview"/>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/etFirstName"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_first_name"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="@string/type_your_last_name"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/etPhoneNumber"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_phone_number"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/email_address" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_email_address"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:fontFamily="@font/poppins"
        android:hint="@string/type_your_password"
        android:minHeight="48dp"
        android:padding="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="Sign In"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>